# btc-gui

./: .gitignore  Cargo.toml  README.md
src/: crypto_price.rs  main.rs
ui/: app-window.slint
