[package]
name = "btc-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
rust_decimal = "1.35.0"
slint = "1.8.0"
serde_json = "1.0.134"

[build-dependencies]
slint-build = "1.8.0"
